# Silver_IDE

./: Cargo.toml  LICENSE  README.md  build.rs  cat.txt  release.sh  upload.sh
.github/workflows/: build-windows.yml  release.yml
assets/: icon-64.rgba  silver.icns
src/: app.rs  cat.rs  commands.rs  config.rs  gui.rs  main.rs  media.rs
src/editor/: buffer.rs  complete.rs  diagnostics.rs  highlight.rs  mod.rs  term.rs
src/ui/: editor_view.rs  home.rs  mod.rs
