[package]
name = "silver-cli"
version = "0.1.0"
edition = "2021"
description = "Silver CLI — a cozy, cat-powered terminal IDE"
license = "MIT"

[[bin]]
name = "silver_kb"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
directories = "5"
chrono = "0.4"
eframe = { version = "0.35.0", default-features = false, features = ["default_fonts", "glow"] }
portable-pty = "0.9"
vt100 = "0.15"

# Keep the binary small and fast
[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = 3
