[package]
name = "silver-cli"
version = "0.1.0"
edition = "2021"
description = "Silver CLI — a cozy, cat-powered terminal IDE"
license = "MIT"

[[bin]]
name = "silver_kb"
path = "src/main.rs"

[target.'cfg(windows)'.build-dependencies]
# Stamps the app icon into the Windows .exe.
winresource = "0.1"

[target.'cfg(windows)'.dependencies]
# WASAPI: asks the sound device whether anything is really playing.
windows = { version = "0.62", features = [
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
] }

[dependencies]
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
directories = "5"
chrono = "0.4"
eframe = { version = "0.35.0", default-features = false, features = ["default_fonts", "glow", "x11", "wayland"] }
portable-pty = "0.9"
vt100 = "0.15"

# Keep the binary small and fast
[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = 3
